# django-tapeforms

./: .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  requirements-rtd.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
docs/: Makefile  advanced_usage.rst  api.rst  api_contrib.rst  api_fieldsets.rst  api_mixins.rst  api_templatetags.rst  conf.py  contrib.rst  fieldsets.rst  index.rst  installation.rst  usage.rst
examples/basic/: apps.py  forms.py  urls.py  views.py
examples/basic/templates/basic/: background_input.html  bootstrap5_view.html  bootstrap_view.html  bulma_view.html  foundation_view.html  headline_label_input.html  select_date_widget.html  simple_view.html  special_widget.html
examples/examples/: settings.py  urls.py
examples/fieldsets/: apps.py  forms.py  urls.py  views.py
examples/fieldsets/templates/fieldsets/: bootstrap5_view.html  manual.html  property.html
tapeforms/: __init__.py  defaults.py  fieldsets.py  mixins.py  utils.py
tapeforms/contrib/: bootstrap.py  bulma.py  foundation.py
tapeforms/static/tapeforms/js/: bulma_fileinput.js
tapeforms/templates/tapeforms/fields/: bootstrap.html  bulma.html  default.html  foundation.html  foundation_fieldset.html
tapeforms/templates/tapeforms/fieldsets/: bootstrap.html  default.html
tapeforms/templates/tapeforms/includes/: errorlist.html  label_tag.html
tapeforms/templates/tapeforms/layouts/: bootstrap.html  default.html  foundation.html
tapeforms/templates/tapeforms/widgets/: bootstrap5_multiwidget.html  bootstrap_multipleinput.html  bootstrap_multiwidget.html  foundation_multipleinput.html
tapeforms/templates/tapeforms/widgets/bulma/: clearable_file_input.html  file.html  radio.html  select.html
tapeforms/templatetags/: tapeforms.py
tapeforms/tests/: settings.py  test_fieldsets.py  test_mixins.py  test_templatetags.py  test_utils.py
tapeforms/tests/contrib/: __init__.py  conftest.py  test_bootstrap.py  test_foundation.py
tapeforms/tests/snapshots/bootstrap4/: field_splitdatetime.html
tapeforms/tests/snapshots/bootstrap4_django4/: field_radio_select.html  field_splitdatetime.html
tapeforms/tests/snapshots/bootstrap5/: field_checkbox.html  field_radio_select.html  field_splitdatetime.html
tapeforms/tests/snapshots/bootstrap5_django4/: field_splitdatetime.html
tapeforms/tests/snapshots/foundation/: field_radios.html  field_text.html
tests/: settings.py  test_fieldsets.py  test_mixins.py  test_templatetags.py  test_utils.py
tests/contrib/: __init__.py  conftest.py  test_bootstrap.py  test_bulma.py  test_foundation.py
tests/snapshots/bootstrap/: field_checkbox.html  field_clearable_file.html  field_radio_buttons.html  field_text.html
tests/snapshots/bootstrap4/: field_checkbox.html  field_radio_select.html  field_splitdatetime__invalid.html
tests/snapshots/bootstrap4_django4/: field_splitdatetime__invalid.html  field_text.html
tests/snapshots/bootstrap5/: field_splitdatetime__invalid.html
tests/snapshots/bootstrap5_django4/: field_clearable_file.html  field_radio_select.html  field_select.html  field_select_multiple.html  field_splitdatetime__invalid.html  field_text.html
tests/snapshots/bulma/: field_checkbox.html  field_clearable_file.html  field_radios.html  field_select.html  field_select_multiple.html  field_text.html  field_textarea.html
tests/snapshots/foundation/: field_checkbox.html
