[project]
name = "django-tapeforms"
version = "2.2.0"
description = "A helper to render Django forms using HTML templates."
authors = [{ name = "Stephan Jaekel", email = "steph@rdev.info" }]
requires-python = ">=3.8,<4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
readme = "README.rst"
dependencies = [
    "Django>=4.2"
]

[project.urls]
Homepage = 'https://github.com/stephrdev/django-tapeforms'
Repository = 'https://github.com/stephrdev/django-tapeforms'
Documentation = "https://django-tapeforms.readthedocs.io"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-django>=4.9",
    "pytest-snapshot>=0.9",
    "coverage[toml]>=7.6",
    "ruff"
]

[tool.ruff]
line-length = 96
indent-width = 4
src = ["tapeforms"]
target-version = "py38"

[tool.ruff.lint]
ignore = ["E501", "E203"]
select = [
  # pyupgrade
  "UP",
  # pycodestyle error
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # pycodestyle warning
  "W"
]

[tool.pytest.ini_options]
addopts = "--verbose --tb=short --nomigrations"
testpaths = ["tapeforms"]
DJANGO_SETTINGS_MODULE = "tapeforms.tests.settings"

[tool.coverage.run]
branch = true
source = ["tapeforms"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []
